[package]
name = "gear-rpc-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake2.workspace = true
futures-util.workspace = true
gsdk.workspace = true
hex = { workspace = true, features = ["std"] }
log.workspace = true
pallet-gear-eth-bridge-primitives = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std"] }
primitive-types = { workspace = true, features = ["std"] }
sc-consensus-grandpa.workspace = true
serde = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-trie = { workspace = true, features = ["std"] }
subxt.workspace = true
trie-db = { workspace = true, features = ["std"] }
gear-core-errors.workspace = true
gear-core.workspace = true
