[package]
name = "mock-contract"
version.workspace = true
edition.workspace = true

[dependencies]
checkpoint-light-client-client.workspace = true
gstd.workspace = true
hex.workspace = true
hex-literal.workspace = true
primitive-types.workspace = true
sails-rs.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true

[features]
debug = ["gstd/debug"]
std = []
default = ["std"]

[target.'cfg(all(target_arch = "wasm32", target_os = "none"))'.dependencies]
getrandom = { workspace = true, features = ["custom"] }
lazy_static = { workspace = true, features = ["spin_no_std"] }
