[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
ff.workspace = true
itertools.workspace = true
jemallocator.workspace = true
keccak-hash.workspace = true
lazy_static.workspace = true
log.workspace = true
num.workspace = true
paste.workspace = true
plonky2.workspace = true
plonky2_ed25519.workspace = true
plonky2_field.workspace = true
plonky2_u32.workspace = true
plonky2_util.workspace = true
plonky2_blake2b256.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
unroll.workspace = true

parity-scale-codec.workspace = true
sp-trie = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
trie-db = { workspace = true, features = ["std"] }

[dev-dependencies]
blake2.workspace = true
