[package]
name = "relayer-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
anyhow.workspace = true
primitive-types.workspace = true
prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[features]
server = []
client = []

default = ["server", "client"]
