[package]
name = "relayer"
version.workspace = true
edition.workspace = true

[dependencies]
bridging_payment.workspace = true
ethereum-client.workspace = true
gear_proof_storage.workspace = true
gear-rpc-client.workspace = true
prover.workspace = true

anyhow.workspace = true
ark-serialize = { workspace = true, features = ["std"] }
axum.workspace = true
checkpoint_light_client-io = { workspace = true, features = ["std"] }
checkpoint_light_client = { workspace = true, features = ["std"] }
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
gear-core.workspace = true
gclient.workspace = true
hex.workspace = true
keccak-hash.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
num = { workspace = true, features = ["serde"] }
parity-scale-codec.workspace = true
pretty_env_logger.workspace = true
primitive-types = { workspace = true, features = ["std"] }
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
utils-prometheus.workspace = true

[build-dependencies]
cgo_oligami = "0.3"
