[package]
name = "relayer"
version.workspace = true
edition.workspace = true

[dependencies]
bridging-payment-client.workspace = true
ethereum-client.workspace = true
gear_proof_storage = { workspace = true, features = ["std"] }
gear-rpc-client.workspace = true
prover.workspace = true

alloy.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
anyhow.workspace = true
ark-serialize = { workspace = true, features = ["std"] }
axum.workspace = true
checkpoint-light-client-client.workspace = true
checkpoint-light-client-io.workspace = true
clap.workspace = true
derive_more.workspace = true
dotenv.workspace = true
eth-events-electra-client.workspace = true
historical-proxy-client.workspace = true
vft-manager-client.workspace = true
ethereum_beacon_client.workspace = true
ethereum-common.workspace = true
futures.workspace = true
gear-core.workspace = true
gclient.workspace = true
humantime.workspace = true
hex.workspace = true
keccak-hash.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
num = { workspace = true, features = ["serde"] }
parity-scale-codec.workspace = true
pretty_env_logger.workspace = true
primitive-types = { workspace = true, features = ["std"] }
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
sails-rs = { workspace = true, features = ["gclient"] }
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
thiserror = { workspace = true, features = ["std"] }
tokio.workspace = true
utils-prometheus.workspace = true
subxt.workspace = true
gsdk.workspace = true
uuid.workspace = true
chrono.workspace = true
zeroize.workspace = true
actix-web.workspace = true
actix.workspace = true
async-trait.workspace = true
sp-consensus-grandpa = { workspace = true, features = ["std"] }

[build-dependencies]
cgo_oligami.workspace = true

[dev-dependencies]
hex-literal.workspace = true
ruzstd.workspace = true
sp-core = { workspace = true, features = ["std"] }
