[package]
name = "plonky2_blake2b256"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
plonky2.workspace = true
plonky2_u32.workspace = true
plonky2_util.workspace = true
rand.workspace = true
static_assertions.workspace = true

[dev-dependencies]
blake2.workspace = true
plonky2_field.workspace = true
