[package]
name = "plonky2_ed25519"
edition.workspace = true
version.workspace = true

[dependencies]
plonky2.workspace = true
plonky2_util.workspace = true
plonky2_field.workspace = true
plonky2_u32.workspace = true
plonky2_ecdsa.workspace = true
plonky2_sha512.workspace = true
curve25519-dalek.workspace = true
itertools = { version = "0.10.0", default-features = false, features = [
    "use_alloc",
] }
num = { version = "0.4", default-features = false, features = [
    "alloc",
    "rand",
] }
rayon.workspace = true
serde.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
rand_chacha.workspace = true
unroll.workspace = true
keccak-hash.workspace = true
static_assertions.workspace = true
sha2.workspace = true
clap.workspace = true
