[package]
name = "plonky2_sha256"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
keccak-hash.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_field.workspace = true
plonky2_u32.workspace = true
plonky2_util.workspace = true
rand.workspace = true
