[package]
name = "plonky2_u32"
description = "u32 gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/plonky2"
edition = "2021"

[dependencies]
anyhow.workspace = true
itertools.workspace = true
num.workspace = true
plonky2.workspace = true

[dev-dependencies]
plonky2 = { workspace = true, features = ["gate_testing"] }
rand.workspace = true
