[package]
name = "ethereum-client"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
primitive-types.workspace = true
reqwest.workspace = true
binary-merkle-tree.workspace = true
ahash.workspace = true
thiserror = { workspace = true, features = ["std"] }
keccak-hash.workspace = true
sp-core = { workspace = true, features = ["std"] }
alloy.workspace = true
