[package]
name = "ethereum-client"
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
alloy.workspace = true
anyhow.workspace = true
keccak-hash.workspace = true
log.workspace = true
primitive-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sp-core = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
tokio.workspace = true
subxt.workspace = true