[package]
name = "bridging-payment-vara-supply"
version.workspace = true
edition.workspace = true

[dependencies]
bridging-payment-vara-supply-app = { path = "app" }

[build-dependencies]
bridging-payment-vara-supply-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
bridging-payment-vara-supply = { path = ".", features = ["wasm-binary"] }
bridging-payment-vara-supply-client = { path = "client" }
vft-treasury = { workspace = true, features = ["wasm-binary"] }
vft-treasury-app.workspace = true
vft-treasury-client.workspace = true
extended_vft_wasm.workspace = true

sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
gtest.workspace = true
parity-scale-codec.workspace = true

[features]
wasm-binary = []