[package]
name = "bridging-payment"
version.workspace = true
edition.workspace = true

[dependencies]
bridging-payment-app = { path = "app" }

[build-dependencies]
bridging-payment-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
bridging-payment = { path = ".", features = ["wasm-binary"] }
bridging-payment-client = { path = "client" }
vft-gateway = { workspace = true, features = ["wasm-binary"] }
vft-gateway-app.workspace = true
vft-gateway-client.workspace = true
extended_vft_wasm.workspace = true

sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
gtest.workspace = true
parity-scale-codec.workspace = true

[features]
wasm-binary = []
