[package]
name = "bridging-payment"
version.workspace = true
edition.workspace = true

[dependencies]
bridging-payment-app = { path = "app" }

[build-dependencies]
bridging-payment-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[features]
wasm-binary = []
