[package]
name = "checkpoint_light_client"
version.workspace = true
edition.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
primitive-types.workspace = true
parity-scale-codec.workspace = true
checkpoint_light_client-io.workspace = true
ark-serialize.workspace = true
circular-buffer.workspace = true
gbuiltin-bls381.workspace = true
hex-literal.workspace = true
tree_hash_derive.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
checkpoint_light_client-io.workspace = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
lazy_static = { version = "1.1", features = ["spin_no_std"] }

[features]
std = [
    "primitive-types/std",
    "parity-scale-codec/std",
    "checkpoint_light_client-io/std",
    "ark-serialize/std",
    "circular-buffer/use_std",
    "getrandom/std",
]
default = ["std"]
