[package]
name = "checkpoint_light_client"
version.workspace = true
edition.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
gear-wasm-instrument.workspace = true
primitive-types.workspace = true
parity-scale-codec.workspace = true
checkpoint_light_client-io.workspace = true
ark-serialize.workspace = true
circular-buffer.workspace = true
gbuiltin-bls381.workspace = true
hex-literal.workspace = true
tree_hash_derive.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
gear-wasm-instrument.workspace = true
checkpoint_light_client-io.workspace = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["custom"] }
lazy_static = { workspace = true, features = ["spin_no_std"] }

[features]
std = [
    "primitive-types/std",
    "parity-scale-codec/std",
    "checkpoint_light_client-io/std",
    "ark-serialize/std",
    "circular-buffer/use_std",
    "getrandom/std",
]
default = ["std"]
