[package]
name = "gear-programs-common"
version.workspace = true
edition.workspace = true

[dependencies]
primitive-types.workspace = true

sails-rtl = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, optional = true }
scale-info = { workspace = true, optional = true }

[features]
wasm = ["dep:sails-rtl", "dep:parity-scale-codec", "dep:scale-info"]
